- introduce outbox message table - a job to scan all outbox message items - sample of send the notification that created from outbox messaage item, then send to azure queue storage.

--- a/Problem.EFCore.Sample/Problem.EFCore.Sample.csproj
+++ b/Problem.EFCore.Sample/Problem.EFCore.Sample.csproj
@@ -15,10 +15,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Quartz" Version="3.8.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Problem.EFCore.Application\Problem.EFCore.Application.csproj" />
+    <ProjectReference Include="..\Problem.EFCore.Infrastructure.Job\Problem.EFCore.Infrastructure.Job.csproj" />
     <ProjectReference Include="..\Problem.EFCore.Infrastructure\Problem.EFCore.Infrastructure.csproj" />
   </ItemGroup>
 
