--- a/Problem.EFCore.Infrastructure/Problem.EFCore.Infrastructure.csproj
+++ b/Problem.EFCore.Infrastructure/Problem.EFCore.Infrastructure.csproj
@@ -9,8 +9,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.17.1" />
+    <PackageReference Include="Quartz" Version="3.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Problem.EFCore.Core.Application\Problem.EFCore.Core.Application.csproj" />
   </ItemGroup>
 
 </Project>
